# hmda-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
examples/: hmda_disparity_demo.ipynb
hmda_analyzer/: __init__.py
hmdaanalyzer/: __init__.py  _http.py  exceptions.py
hmdaanalyzer/analysis/: cra_proxy.py  disparity.py  geographic.py  lender.py
hmdaanalyzer/data/: loader.py  schema.py
hmdaanalyzer/methodology/: __init__.py  cra_proxy_methodology.md
hmdaanalyzer/report/: generator.py
tests/: conftest.py  test_cra_proxy.py  test_disparity.py  test_geographic.py  test_lender.py  test_load_range.py  test_loader.py  test_missing_column.py  test_report.py
