[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmda-analyzer"
version = "0.2.0"
description = "HMDA mortgage lending disparity analyzer — denial rates, racial disparities, lending deserts, and lender benchmarking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "requests>=2.27.0",
]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/hmda-analyzer"
